--- a/src/components/Wrapper/Wrapper.css
+++ b/src/components/Wrapper/Wrapper.css
@@ -2,7 +2,7 @@
   display: flex;
   width: 100%;
   box-sizing: border-box;
-  padding: 20px;
+  /* padding: 20px; */
   justify-content: flex-start;
 }
 
